Adjusted forms and homepage.

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -26,7 +26,7 @@
         <div class="form-group">
             {{ form.as_p }}
         </div>
-        <button type="submit" class="btn btn-success">Войти</button>
+        <button type="submit" class="btn btn-outline-info">Войти</button>
     </form>
     </div>
 </div>
