--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,15 +3,15 @@
 {% block title %}Обратиться к нам{% endblock %}
 
 {% block content %}
-    <div class="text-center">
-        <h1>Обратиться к нам</h1>
-    </div>
+{#    <div class="text-center">#}
+{#        <h1>Обратиться к нам</h1>#}
+{#    </div>#}
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6 col-12">
                 <form class="contact-form" method="post" action="{% url 'contact_url' %}">{% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-success">Отправить</button>
+                    <button type="submit" class="btn btn-outline-info">Отправить</button>
                 </form>
             </div>
         </div>
