--- a/templates/search/view.html
+++ b/templates/search/view.html
@@ -9,7 +9,7 @@
 
    {% if request.GET.q %}
         <div class="col-12 mb-3">
-           Results for <b>{{ request.GET.q }}</b>
+           Результаты поиска для <b>{{ request.GET.q }}</b>
         <hr/>
         </div>
        {% else %}
