--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -26,7 +26,7 @@
         <div class="form-group">
             {{ form.as_p }}
         </div>
-        <button type="submit" class="btn btn-success">Зарегистрироваться</button>
+        <button type="submit" class="btn btn-outline-info">Зарегистрироваться</button>
     </form>
     </div>
 </div>
