--- a/templates/accounts/snippets/login_form.html
+++ b/templates/accounts/snippets/login_form.html
@@ -6,5 +6,5 @@
     <div class="form-group">
     {{ form.as_p }}
     </div>
-    <button type="submit" class="btn btn-success">Войти</button>
+    <button type="submit" class="btn btn-outline-info">Войти</button>
 </form>
