--- a/templates/carts/snippets/cart-ajax.html
+++ b/templates/carts/snippets/cart-ajax.html
@@ -15,13 +15,13 @@
                 success: function (data) {
                     let submitSpan = thisForm.find('.submit-span');
                     if (data.added && data.removed === false) {
-                        submitSpan.html('In Cart <button type="submit" class="btn btn-link">Убрать?</button>');
+                        submitSpan.html('В корзине <button type="submit" class="btn btn-link">Убрать?</button>');
                     }
                     if (data.removed && data.added === false) {
-                        submitSpan.html('<button type="submit" class="btn btn-success">Добавить в корзину</button>');
+                        submitSpan.html('<button type="submit" class="btn btn-outline-info">Добавить в корзину</button>');
                     }
                     let navCount = $('.nav-cart-count');
-                    navCount.html(data.cartItemCount + '<i class="fas fa-shopping-cart">');
+                    navCount.html(data.cartItemCount + ' 🛒');
 
                     let currentPath = window.location.href;
 
