--- a/templates/products/snippets/update-cart.html
+++ b/templates/products/snippets/update-cart.html
@@ -3,9 +3,9 @@
     <input type="hidden" name="product_id" value="{{ product.id }}">
    <span class="submit-span">
        {% if object in cart.products.all %}
-            In Cart <button type="submit" class="btn btn-link">Убрать из корзины?</button>
+            В корзине <button type="submit" class="btn btn-link">Убрать?</button>
        {% else %}
-            <button type="submit" class="btn btn-outline-danger">Добавить в корзину</button>
+            <button type="submit" class="btn btn-outline-info">Добавить в корзину</button>
        {% endif %}
    </span>
 </form>
