--- a/templates/carts/checkout-done.html
+++ b/templates/carts/checkout-done.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="col-6 mx-auto py-5 text-center">
         <h1 class="display-1"> Благодарим Вас за заказ.</h1>
-        <p><b>Order Code: </b> {{ order_code }}</p>
+{#        <p><b>Order Code: </b> {{ order_code }}</p>#}
         <a class="btn btn-info" href="{% url 'home_url' %}"> Вернуться на домашнюю страницу</a>
     </div>
 {% endblock %}
