--- a/templates/products/snippets/card.html
+++ b/templates/products/snippets/card.html
@@ -1,12 +1,12 @@
 <div class="card mr-2">
     {% if instance.image %}
       <img src="{{ instance.image.url }}" class="card-img-top" alt="{{ instance.title }}"
-           style="width: auto; height: 300px;">
+           style="width: auto; height: 200px;">
     {% endif %}
     <div class="card-body">
         <h5 class="card-title">{{ instance.title }}</h5>
         <h5 class="card-text">{{ instance.price|floatformat:2 }} ₽</h5>
-        <p class="card-text">{{ instance.description|truncatewords:15 }}</p>
+        <p class="card-text" style="width: auto; height: 70px;">{{ instance.description|truncatewords:5 }}</p>
         <p class="card-text"><small class="text-muted">{{ instance.created_at|timesince }} назад</small></p>
         <hr/>
 {#        <div class="col">#}
