--- a/templates/search/view.html
+++ b/templates/search/view.html
@@ -5,28 +5,33 @@
 {% endblock %}
 
 {% block content %}
-   <div class="row">
 
-   {% if request.GET.q %}
-        <div class="col-12 mb-3">
-           Результаты поиска для <b>{{ request.GET.q }}</b>
-        <hr/>
-        </div>
-       {% else %}
-       <div class="col-12 col-md-8 mx-auto py-4">
-           <form>
-               <input class="form-control" type="text" placeholder="Поиск…" name="q">
-           </form>
-       </div>
-       <div class="col-12">
-              <hr/>
-       </div>
-   {% endif %}
+    {% include "products/snippets/tag.html" %}
+
+    <hr/>
+
+    <div class="row">
+
+        {% if request.GET.q %}
+            <div class="col-12 mb-3">
+                Результаты для <b>{{ request.GET.q }}</b>
+                <hr/>
+            </div>
+        {% else %}
+            <div class="col-12 col-md-8 mx-auto py-4">
+                <form>
+                    <input class="form-control" type="text" placeholder="Поиск…" name="q">
+                </form>
+            </div>
+            <div class="col-12">
+                <hr/>
+            </div>
+        {% endif %}
 
         {% for object in object_list %}
             <div class="col-3">
                 {% include "products/snippets/card.html" with instance=object %}
             </div>
         {% endfor %}
-   </div>
+    </div>
 {% endblock %}
