--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block title %}Обратиться к нам{% endblock %}
 
 {% block content %}
@@ -9,8 +10,9 @@
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6 col-12">
-                <form class="contact-form" method="post" action="{% url 'contact_url' %}">{% csrf_token %}
-                    {{ form.as_p }}
+                <form class="contact-form" method="POST">
+                    {% csrf_token %}
+                    {{ form|crispy }}
                     <button type="submit" class="btn btn-outline-info">Отправить</button>
                 </form>
             </div>
@@ -19,5 +21,4 @@
 {% endblock %}
 
 {% block bottom %}
-    <script src="{% static 'js/contact.js' %}"></script>
 {% endblock %}
