--- a/templates/search/view.html
+++ b/templates/search/view.html
@@ -29,7 +29,7 @@
         {% endif %}
 
         {% for object in object_list %}
-            <div class="col-3">
+            <div class="col-sm-3">
                 {% include "products/snippets/card.html" with instance=object %}
             </div>
         {% endfor %}
