--- a/templates/carts/snippets/cart-ajax.html
+++ b/templates/carts/snippets/cart-ajax.html
@@ -18,7 +18,7 @@
                         submitSpan.html('В корзине <button type="submit" class="btn btn-link">Убрать?</button>');
                     }
                     if (data.removed && data.added === false) {
-                        submitSpan.html('<button type="submit" class="btn btn-outline-info">Добавить в корзину</button>');
+                        submitSpan.html('<button type="submit" class="btn btn-block btn-outline-info">Добавить в корзину</button>');
                     }
                     let navCount = $('.nav-cart-count');
                     navCount.html(data.cartItemCount + ' 🛒');
