--- a/templates/products/detail.html
+++ b/templates/products/detail.html
@@ -11,6 +11,7 @@
             <img src="{{ object.image.url }}" width="500">
         </div>
         <div class="col-12 col-md-6">
+            <h2>{{ object.price|floatformat:2 }}₽</h2>
             {% include "products/snippets/update-cart.html" with product=object cart=cart %}
             <p>{{ object.description|linebreaks }}</p>
         </div>
