--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,28 @@
 
     {% include "base/js.html" %}
 
-    {% block bottom %}{% endblock %}
+    {% block bottom %}
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-left">
+                        Copyright &copy; Autobest
+                        <script>
+                            document.write(new Date().getFullYear());
+                        </script>
+                    </div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-vk"></i></a>
+                    </div>
+{#                    <div class="col-lg-4 text-lg-right">#}
+{#                        <a class="mr-3" href="#!">Privacy Policy</a>#}
+{#                        <a href="#!">Terms of Use</a>#}
+{#                    </div>#}
+                </div>
+            </div>
+        </footer>
+    {% endblock %}
 
     <script src="{% static 'js/search.js' %}"></script>
 </body>
