--- a/templates/products/snippets/tag.html
+++ b/templates/products/snippets/tag.html
@@ -54,5 +54,6 @@
         <a class="dropdown-item" href="/search/?q=Автохимия">Автохимия</a>
         <a class="dropdown-item" href="/search/?q=Расходники">Расходники</a>
         <a class="dropdown-item" href="/search/?q=Жидкость">Жидкость</a>
+        <a class="dropdown-item" href="/search/?q=Бандл">Бандл</a>
     </div>
 </div>
